--- a/scripts/minimal_baseline_args.yaml
+++ b/scripts/minimal_baseline_args.yaml
@@ -1,25 +1,27 @@
 model:
+  architecture: 'GRUDecoder'
   n_input_features: 512
   n_units: 768
   rnn_dropout: 0.4
   rnn_trainable: true
   n_layers: 5
-  bidirectional: false
   patch_size: 14
   patch_stride: 4
+
   input_network:
     n_input_layers: 1
     input_layer_sizes:
     - 512
     input_trainable: true
     input_layer_dropout: 0.2
+
 gpu_number: '1'
-distributed_training: false
 mode: train
 use_amp: true
-output_dir: /kaggle/working/output
+
+output_dir: /kaggle/working/output_dir
+checkpoint_dir: /kaggle/working/output_dir/checkpoints
 init_from_checkpoint: false
-checkpoint_dir: /kaggle/working/output/checkpoints
 init_checkpoint_path: None
 save_best_checkpoint: true
 save_all_val_steps: false
@@ -27,16 +29,18 @@ save_final_model: false
 save_val_metrics: true
 early_stopping: false
 early_stopping_val_steps: 20
+
 num_training_batches: 10000
 lr_scheduler_type: cosine
 lr_max: 0.005
 lr_min: 0.0001
-lr_decay_steps: 120000
+lr_decay_steps: 10000
 lr_warmup_steps: 1000
 lr_max_day: 0.005
 lr_min_day: 0.0001
-lr_decay_steps_day: 120000
+lr_decay_steps_day: 10000
 lr_warmup_steps_day: 1000
+
 beta0: 0.9
 beta1: 0.999
 epsilon: 0.1
@@ -44,13 +48,16 @@ weight_decay: 0.001
 weight_decay_day: 0
 seed: 10
 grad_norm_clip_value: 10
+
 batches_per_train_log: 200
-batches_per_val_step: 2000
+batches_per_val_step: 1000
+
 batches_per_save: 0
-log_individual_day_val_PER: true
+log_individual_day_val_PER: false
 log_val_skip_logs: false
 save_val_logits: true
 save_val_data: false
+
 dataset:
   data_transforms:
     white_noise_std: 1.0
@@ -62,6 +69,7 @@ dataset:
     smooth_kernel_size: 100
     smooth_data: true
     smooth_kernel_std: 2
+
   neural_dim: 512
   batch_size: 16
   n_classes: 41
@@ -73,7 +81,8 @@ dataset:
   must_include_days: null
   test_percentage: 0.1
   feature_subset: null
-  dataset_dir: /kaggle/input/brain-to-text-25-minimal/t15_copyTask_neuralData/hdf5_data_final
+
+  dataset_dir: ${oc.env:DATA_DIR}
   bad_trials_dict: null
   sessions:
   - t15.2023.08.11
